--- a/index.html
+++ b/index.html
@@ -11,5 +11,34 @@
 </head>
 <body>
 
+    <!-- Navbar -->
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <!-- B logo on left side -->
+          <a class="navbar-brand" href="./index.html" style="font-size: 30px; color: lightblue"><strong>B</strong></a>
+          <!-- Toggler for responsiveness on small screens -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Collapsable content of the navbar -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./portfolio.html">Portfolio</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+                <a class="btn btn-sm btn-outline-secondary" href="./contact.html" role="button">Contact Me</a>
+            </form>
+          </div>
+        </div>
+    </nav>
+
+      <!-- Bootstrap Javascript -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
