Added responsive banner with text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 
@@ -38,7 +40,34 @@
         </div>
     </nav>
 
+    <header class="banner" style="position: relative">
+        <div class="container-fluid banner-text">
+            <div class="display-1">Billy Montooth-Keating<br>
+                <h4 class="languages">HTML</h4>
+                <h4 class="languages">CSS</h4>
+                <h4 class="languages">Javascript</h4>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- </div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/images/Hero.jpg" class="d-block w-100" alt="laptop with code">
+            <div class="carousel-caption d-md-block">
+                <h1>Billy Montooth-Keating</h1>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>Javascript</p>
+            </div>
+        </div>
+        </div>
+      </div> -->
+
       <!-- Bootstrap Javascript -->
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
