--- a/index.html
+++ b/index.html
@@ -40,16 +40,58 @@
         </div>
     </nav>
 
+    <!-- Banner and text -->
+
     <header class="banner" style="position: relative">
         <div class="container-fluid banner-text">
             <div class="display-1">Billy Montooth-Keating<br>
-                <h4 class="languages">HTML</h4>
-                <h4 class="languages">CSS</h4>
-                <h4 class="languages">Javascript</h4>
+                <div class="container">
+                    <h4>HTML</h4>
+                    <h4>CSS</h4>
+                    <h4>Javascript</h4>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- Headshot and About Me -->
+    <div class="container">
+        <div class="card mb-3" style="max-width: 100%; margin:40px;">
+            <div class="row g-0">
+            <div class="col-md-4">
+                <img class="img-fluid" src="./assets/images/Headshot.jpg" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title display-4">About Me</h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
+                    </p>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="container" style="margin-top: 40px;">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="./assets/images/Headshot.jpg" alt="picture of Billy">
+            </div>
+            <div class="col-sm-8">
+                <div class="container">
+                    <div class="row">
+                        <div class="display-4">
+                            About Me
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
 
     <!-- </div>
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
