--- a/index.html
+++ b/index.html
@@ -55,23 +55,45 @@
     </header>
 
     <!-- Headshot and About Me -->
-    <div class="container">
-        <div class="card mb-3" style="max-width: 100%; margin:40px;">
+    <section class="container">
+        <article class="card mb-3" style="max-width: 100%; margin:40px;">
             <div class="row g-0">
-            <div class="col-md-4">
-                <img class="img-fluid" src="./assets/images/Headshot.jpg" alt="...">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title display-4">About Me</h5>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
-                    </p>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./assets/images/Headshot.jpg" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title display-4">About Me</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
+                        </p>
+                    </div>
                 </div>
             </div>
+        </article>
+    </section>
+
+    <!-- Portfolio section with picture of work -->
+
+    <section class="container">
+        <article class="card mb-3" style="max-width: 100%; margin:40px;">
+            <div class="row g-0">
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title display-4">Portfolio</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./assets/images/Headshot.jpg" alt="...">
+                </div>
             </div>
-        </div>
-    </div>
+        </article>
+    </section>
+
+
 
     <!-- <div class="container" style="margin-top: 40px;">
         <div class="row">
