Added CSS class for articles

--- a/index.html
+++ b/index.html
@@ -15,120 +15,84 @@
 
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <!-- B logo on left side -->
-          <a class="navbar-brand" href="./index.html" style="font-size: 30px; color: lightblue"><strong>B</strong></a>
-          <!-- Toggler for responsiveness on small screens -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Collapsable content of the navbar -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./portfolio.html">Portfolio</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-                <a class="btn btn-sm btn-outline-secondary" href="./contact.html" role="button">Contact Me</a>
-            </form>
-          </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <!-- B logo on left side -->
+        <a class="navbar-brand" href="./index.html" style="font-size: 30px; color: lightblue"><strong>B</strong></a>
+        <!-- Toggler for responsiveness on small screens -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapsable content of the navbar -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+        </ul>
+        <form class="d-flex">
+            <a class="btn btn-sm btn-outline-secondary" href="./contact.html" role="button">Contact Me</a>
+        </form>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Banner and text -->
 
-    <header class="banner" style="position: relative">
-        <div class="container-fluid banner-text">
-            <div class="display-1">Billy Montooth-Keating<br>
-                <div class="container">
-                    <h4>HTML</h4>
-                    <h4>CSS</h4>
-                    <h4>Javascript</h4>
+<header class="banner" style="position: relative">
+    <div class="container-fluid banner-text">
+        <div class="display-1">Billy Montooth-Keating<br>
+            <div class="container">
+                <h4>HTML</h4>
+                <h4>CSS</h4>
+                <h4>Javascript</h4>
+            </div>
+        </div>
+    </div>
+</header>
+
+    <!-- Headshot and About Me -->
+
+<section class="container">
+    <article class="card mb-3 article">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img class="img-fluid" src="./assets/images/Headshot.jpg" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title display-4"><strong>About Me</strong></h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
+                    </p>
                 </div>
             </div>
         </div>
-    </header>
-
-    <!-- Headshot and About Me -->
-    <section class="container">
-        <article class="card mb-3" style="max-width: 100%; margin:40px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img class="img-fluid" src="./assets/images/Headshot.jpg" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title display-4">About Me</h5>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </article>
-    </section>
+    </article>
+</section>
 
     <!-- Portfolio section with picture of work -->
 
-    <section class="container">
-        <article class="card mb-3" style="max-width: 100%; margin:40px;">
-            <div class="row g-0">
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title display-4">Portfolio</h5>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-fluid" src="./assets/images/Headshot.jpg" alt="...">
+<section class="container">
+    <article class="card mb-3 article">
+        <div class="row g-0">
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title display-4"><strong>Portfolio</strong></h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
+                    </p>
                 </div>
             </div>
-        </article>
-    </section>
-
-
-
-    <!-- <div class="container" style="margin-top: 40px;">
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="./assets/images/Headshot.jpg" alt="picture of Billy">
-            </div>
-            <div class="col-sm-8">
-                <div class="container">
-                    <div class="row">
-                        <div class="display-4">
-                            About Me
-                        </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
-                        </p>
-                    </div>
-                </div>
+            <div class="col-md-4">
+                <img class="img-fluid" src="./assets/images/ExampleWork.png" alt="...">
             </div>
         </div>
-    </div> -->
-
-    <!-- </div>
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./assets/images/Hero.jpg" class="d-block w-100" alt="laptop with code">
-            <div class="carousel-caption d-md-block">
-                <h1>Billy Montooth-Keating</h1>
-                <p>HTML</p>
-                <p>CSS</p>
-                <p>Javascript</p>
-            </div>
-        </div>
-        </div>
-      </div> -->
+    </article>
+</section>
 
       <!-- Bootstrap Javascript -->
 
