--- a/contact.html
+++ b/contact.html
@@ -8,35 +8,64 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <style>
+        body {
+            background-image: url(./assets/images/ContactBackground.jpg);
+            background-size: cover;
+        }
+    </style> 
+
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <!-- B logo on left side -->
-          <a class="navbar-brand" href="./index.html" style="font-size: 30px; color: lightblue"><strong>B</strong></a>
-          <!-- Toggler for responsiveness on small screens -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Collapsable content of the navbar -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./portfolio.html">Portfolio</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-                <a class="btn btn-sm btn-outline-secondary" href="./contact.html" role="button">Contact Me</a>
-            </form>
-          </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <!-- B logo on left side -->
+        <a class="navbar-brand" href="./index.html" style="font-size: 30px; color: lightblue"><strong>B</strong></a>
+        <!-- Toggler for responsiveness on small screens -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapsable content of the navbar -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+        </ul>
+        <form class="d-flex">
+            <a class="btn btn-sm btn-outline-secondary" href="./contact.html" role="button">Contact Me</a>
+        </form>
         </div>
-      </nav>
+    </div>
+    </nav>
 
-    <h1>Contact</h1>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                &nbsp;
+            </div>
+            <div class="col-md-6 contact mt-5 pb-3">
+                <h1 class="display-1">Contact Me</h1>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Name</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Send</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
