added padding to images

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <article class="card mb-3 article">
         <div class="row g-0">
             <div class="col-md-4">
-                <img class="img-fluid" src="./assets/images/Headshot.jpg" alt="...">
+                <img class="img-fluid p-3" src="./assets/images/Headshot.jpg" alt="...">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img class="img-fluid" src="./assets/images/ExampleWork.png" alt="...">
+                <img class="img-fluid p-3" src="./assets/images/ExampleWork.png" alt="...">
             </div>
         </div>
     </article>
