More comments + semantic HTML elements

--- a/contact.html
+++ b/contact.html
@@ -44,28 +44,29 @@
         </form>
         </div>
     </div>
-    </nav>
+</nav>
 
+<!-- Contact Me page and button -->
     
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                &nbsp;
+<section class="container">
+    <div class="row">
+        <div class="col-md-3">
+            &nbsp;
+        </div>
+        <div class="col-md-6 contact mt-5 pb-3">
+            <h1 class="display-1">Contact Me</h1>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Name</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1">
             </div>
-            <div class="col-md-6 contact mt-5 pb-3">
-                <h1 class="display-1">Contact Me</h1>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Name</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Send</button>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+            <button type="submit" class="btn btn-primary">Send</button>
         </div>
     </div>
+</section>
 
 </body>
 </html>
