--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
+                                        <!-- Title text -->
                     <h5 class="card-title display-4"><strong>About Me</strong></h5>
+                                        <!-- Article text -->
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
                     </p>
@@ -81,7 +83,9 @@
         <div class="row g-0">
             <div class="col-md-8">
                 <div class="card-body">
+                    <!-- Title text -->
                     <h5 class="card-title display-4"><strong>Portfolio</strong></h5>
+                    <!-- Article text -->
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
                     </p>
