--- a/portfolio.html
+++ b/portfolio.html
@@ -42,25 +42,26 @@
 
 <!-- Project examples carousel -->
 
-<div class="container">
+<section class="container">
   <div class="row">
     &nbsp;
   </div>
   <div class="carousel slide" data-bs-ride="carousel">
     <ol class="carousel-indicators">
       <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="./assets/images/CodeRefactor.png" class="d-block w-100" alt="Refactored code before and after">
         <div class="carousel-caption d-none d-md-block contact">
+          <!-- Title of work -->
           <h5>Code Refactor</h5>
+          <!-- Description -->
           <p>Refactoring code of an example webpage to improve organization, legibility, and accessibility</p>
         </div>
       </div>
     </div>
+    <!-- Buttons to move through example work, currently don't do anything as there is only one picture -->
     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -70,7 +71,7 @@
       <span class="visually-hidden">Next</span>
     </a>
   </div>
-</div>
+</section>
 
       <!-- Bootstrap Javascript -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
