Added social media links on Contact Me page

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
     <article class="card mb-3 article">
         <div class="row g-0">
             <div class="col-md-4">
-                <img class="img-fluid p-3" src="./assets/images/Headshot.jpg" alt="...">
+                <img class="img-fluid p-3" src="./assets/images/Headshot.jpg" alt="Picture of Billy Montooth-Keating">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
                                         <!-- Title text -->
                     <h5 class="card-title display-4"><strong>About Me</strong></h5>
                                         <!-- Article text -->
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
+                    <p class="card-text p-2">
+                        I currently live in Santa Barbara, California, after graduating from UC Santa Barbara with a degree in Biopsychology in June 2020. Now, I'm enrolled in the UC Davis Web Development Boot Camp, where I'm learning the skills necessary to become a full-stack web developer. Thus far, we've learned about front-end web development, including HTML, CSS, and Javascript. I'll be graduating from the Boot Camp in June 2021, after which I plan to become a full-time web developer. 
                     </p>
                 </div>
             </div>
@@ -86,13 +86,13 @@
                     <!-- Title text -->
                     <h5 class="card-title display-4"><strong>Portfolio</strong></h5>
                     <!-- Article text -->
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempus diam. Praesent faucibus velit et arcu posuere eleifend. Donec vitae leo blandit, rhoncus leo ut, placerat nisl. Aenean non semper diam. Etiam consequat viverra lacus ut auctor. Donec lorem tellus, tristique vitae malesuada id, consectetur nec nunc. Ut eu interdum felis. Integer ultrices libero vitae est lobortis, eget efficitur tellus ultricies. Aenean convallis lacinia dui et luctus. Phasellus at ante bibendum, volutpat lacus eget, viverra ex. Vestibulum id ultrices libero.
+                    <p class="card-text p-2">
+                        More projects will be added to the Portfolio page as I progress through the Boot Camp. As of now, you can see examples of some of the assignments I've been working on, including this website. To view my portfolio, click <a href="./portfolio.html">here.</a> 
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
-                <img class="img-fluid p-3" src="./assets/images/ExampleWork.png" alt="...">
+                <img class="img-fluid p-3" src="./assets/images/ExampleWork.png" alt="Screenshot of work by Billy Montooth-Keating">
             </div>
         </div>
     </article>
