--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/f54cb58e72.js" crossorigin="anonymous"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <style>
-        body {
-            background-image: url(./assets/images/ContactBackground.jpg);
-            background-size: cover;
-        }
-    </style> 
+    
+<style>
+    body {
+        background-image: url(./assets/images/ContactBackground.jpg);
+        background-size: cover;
+    }
+</style> 
 
     <!-- Navbar -->
 
@@ -55,15 +57,46 @@
         </div>
         <div class="col-md-6 contact mt-5 pb-3">
             <h1 class="display-1">Contact Me</h1>
-            <div class="mb-3">
+            <div class="mb-3" style="text-align: left;">
                 <label for="exampleFormControlInput1" class="form-label">Name</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1">
             </div>
-            <div class="mb-3">
+            <div class="mb-3" style="text-align: left;">
                 <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
+        </div>
+    </div>
+</section>
+
+<!-- Social Media -->
+
+<section class="container">
+    <div class="row">
+        <div class="col-md-3">
+            &nbsp;
+        </div>
+        <div class="col-md-6 contact mt-5">
+            <h1 class="display-1">
+                Or, reach me on social media:
+            </h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            &nbsp;
+        </div>
+        <!-- Social Media Icons and links -->
+        <div class="col-md-6 contact">
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/billy.montoothkeating/">
+                <i class="fab fa-facebook-square p-3" style="font-size:48px;"></i>
+            </a>
+            <!-- LinkedIn -->
+            <a href="https://www.linkedin.com/in/william-montooth-keating-a8b192195/">
+                <i class="fab fa-linkedin p-3" style="font-size: 48px;"></i>
+            </a>
         </div>
     </div>
 </section>
