Changed style of portfolio page, using cards instead

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,26 @@
     </div>
   </nav>
 
+<!-- Project Cards -->
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <img src="./assets/images/WebDevSuccess.jpg" class="card-img-top" alt="Image of Web Application homepage" style="padding: 10px">
+        <div class="card-body">
+          <h5 class="card-title">Job Search Web Application</h5>
+          <p class="card-text">For this project, a group of peers and I created a job search web application using third party APIs. I was responsible for integrating the Github Jobs API for the job search, creating search bars for description and location, and dynamically generating cards to display job search results fetched from the API.</p>
+          <a href="https://sesdesoir.github.io/WebDevelopmentSuccess/" class="btn btn-primary">Deployed Web Application</a>
+          <a href="https://github.com/Sesdesoir/GroupPjUno" class="btn btn-primary">View on Github</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Project examples carousel -->
 
-<section class="container">
+<!-- <section class="container">
   <div class="row">
     &nbsp;
   </div>
@@ -54,14 +71,11 @@
       <div class="carousel-item active">
         <img src="./assets/images/CodeRefactor.png" class="d-block w-100" alt="Refactored code before and after">
         <div class="carousel-caption d-none d-md-block contact">
-          <!-- Title of work -->
           <h5>Code Refactor</h5>
-          <!-- Description -->
           <p>Refactoring code of an example webpage to improve organization, legibility, and accessibility</p>
         </div>
       </div>
     </div>
-    <!-- Buttons to move through example work, currently don't do anything as there is only one picture -->
     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -71,7 +85,7 @@
       <span class="visually-hidden">Next</span>
     </a>
   </div>
-</section>
+</section> -->
 
       <!-- Bootstrap Javascript -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
