New card for coding quiz homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,14 +43,29 @@
 <!-- Project Cards -->
 <div class="container">
   <div class="row">
+    
+    <!-- Job Search card -->
     <div class="col-sm-6">
-      <div class="card">
+      <div class="card portfolio-card">
         <img src="./assets/images/WebDevSuccess.jpg" class="card-img-top" alt="Image of Web Application homepage" style="padding: 10px">
         <div class="card-body">
           <h5 class="card-title">Job Search Web Application</h5>
           <p class="card-text">For this project, a group of peers and I created a job search web application using third party APIs. I was responsible for integrating the Github Jobs API for the job search, creating search bars for description and location, and dynamically generating cards to display job search results fetched from the API.</p>
           <a href="https://sesdesoir.github.io/WebDevelopmentSuccess/" class="btn btn-primary">Deployed Web Application</a>
           <a href="https://github.com/Sesdesoir/GroupPjUno" class="btn btn-primary">View on Github</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Coding Quiz card -->
+    <div class="col-sm-6">
+      <div class="card portfolio-card">
+        <img src="./assets/images/WebDevSuccess.jpg" class="card-img-top" alt="Image of Coding Quiz webpage" style="padding: 10px">
+        <div class="card-body">
+          <h5 class="card-title">Coding Quiz</h5>
+          <p class="card-text">I created a coding quiz using javascript and jQuery. The quiz utilizes a timing system, tracks the user's score, and updates the HTML and CSS based on user's input. The quiz covers basic front-end web development material. </p>
+          <a href="https://billy-mk.github.io/Coding-Quiz/" class="btn btn-primary">Deployed Coding Quiz</a>
+          <a href="https://github.com/Billy-MK/Coding-Quiz" class="btn btn-primary">View on Github</a>
         </div>
       </div>
     </div>
