--- a/portfolio.html
+++ b/portfolio.html
@@ -40,32 +40,55 @@
     </div>
   </nav>
 
+<div class="container">
+  <h1 class="display-1 text-center">Portfolio</h1>
+</div>
+
 <!-- Project Cards -->
 <div class="container">
-  <div class="row">
+  <div class="row" style="margin: 10px">
     
     <!-- Job Search card -->
-    <div class="col-sm-6">
+    <div class="col-sm-6 mt-3">
       <div class="card portfolio-card">
         <img src="./assets/images/WebDevSuccess.jpg" class="card-img-top" alt="Image of Web Application homepage" style="padding: 10px">
         <div class="card-body">
-          <h5 class="card-title">Job Search Web Application</h5>
+          <h2 class="card-title text-center">Job Search Web Application</h2>
           <p class="card-text">For this project, a group of peers and I created a job search web application using third party APIs. I was responsible for integrating the Github Jobs API for the job search, creating search bars for description and location, and dynamically generating cards to display job search results fetched from the API.</p>
-          <a href="https://sesdesoir.github.io/WebDevelopmentSuccess/" class="btn btn-primary">Deployed Web Application</a>
-          <a href="https://github.com/Sesdesoir/GroupPjUno" class="btn btn-primary">View on Github</a>
+          <div class="text-center">
+            <a href="https://sesdesoir.github.io/WebDevelopmentSuccess/" class="btn btn-primary mt-1">Deployed Web Application</a>
+            <a href="https://github.com/Sesdesoir/GroupPjUno" class="btn btn-primary mt-1">View on Github</a>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Coding Quiz card -->
-    <div class="col-sm-6">
+    <div class="col-sm-6 mt-3">
       <div class="card portfolio-card">
-        <img src="./assets/images/WebDevSuccess.jpg" class="card-img-top" alt="Image of Coding Quiz webpage" style="padding: 10px">
+        <img src="./assets/images/CodingQuiz.png" class="card-img-top" alt="Image of Coding Quiz webpage" style="padding: 10px">
         <div class="card-body">
-          <h5 class="card-title">Coding Quiz</h5>
+          <h2 class="card-title text-center">Coding Quiz</h2>
           <p class="card-text">I created a coding quiz using javascript and jQuery. The quiz utilizes a timing system, tracks the user's score, and updates the HTML and CSS based on user's input. The quiz covers basic front-end web development material. </p>
-          <a href="https://billy-mk.github.io/Coding-Quiz/" class="btn btn-primary">Deployed Coding Quiz</a>
-          <a href="https://github.com/Billy-MK/Coding-Quiz" class="btn btn-primary">View on Github</a>
+          <div class="text-center">
+            <a href="https://billy-mk.github.io/Coding-Quiz/" class="btn btn-primary mt-1">Deployed Coding Quiz</a>
+            <a href="https://github.com/Billy-MK/Coding-Quiz" class="btn btn-primary mt-1">View on Github</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Calendar card -->
+    <div class="col-sm-6 mt-3">
+      <div class="card portfolio-card">
+        <img src="./assets/images/Calendar.png" class="card-img-top" alt="Image of Calendar homepage with color-coded time slots" style="padding: 10px">
+        <div class="card-body">
+          <h2 class="card-title text-center">Calendar Web Application</h2>
+          <p class="card-text">I created a calendar web application utilizing a third-party API to track the time of day. Depending on the time of day, each time slot is color coded green, yellow, or gray. Information the user types into a time slot is saved to local storage.</p>
+          <div class="text-center">
+            <a href="https://billy-mk.github.io/Calendar/" class="btn btn-primary mt-1">Deployed Web Application</a>
+            <a href="https://github.com/Billy-MK/Calendar" class="btn btn-primary mt-1">View on Github</a>
+          </div>
         </div>
       </div>
     </div>
