--- a/contact.html
+++ b/contact.html
@@ -57,15 +57,10 @@
         </div>
         <div class="col-md-6 contact mt-5 pb-3">
             <h1 class="display-1">Contact Me</h1>
-            <div class="mb-3" style="text-align: left;">
-                <label for="exampleFormControlInput1" class="form-label">Name</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1">
+            <div>
+                <h2>By email: wmontoothkeating@gmail.com</h2>
+                <h2>By phone: (530) 760-8744</h2>
             </div>
-            <div class="mb-3" style="text-align: left;">
-                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Send</button>
         </div>
     </div>
 </section>
