--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,17 @@
   </nav>
 
 <div class="container">
-  <h1 class="display-1 text-center">Portfolio</h1>
+  <div>
+    <h1 class="display-1 text-center portfolio-title mt-3">Portfolio</h1>
+  </div>
+  <br>
+  <div>
+    <a href="./assets/files/resume.pdf" download class="text-center">
+      <h2>
+        Click here to download my résumé
+      </h2>
+    </a>
+  </div>
 </div>
 
 <!-- Project Cards -->
@@ -55,6 +65,7 @@
         <div class="card-body">
           <h2 class="card-title text-center">Job Search Web Application</h2>
           <p class="card-text">For this project, a group of peers and I created a job search web application using third party APIs. I was responsible for integrating the Github Jobs API for the job search, creating search bars for description and location, and dynamically generating cards to display job search results fetched from the API.</p>
+          <p class="card-text" style="color:rgb(94, 0, 0)">Note: As of February 2021, there is a CORS issue with the API used. I am working on a fix to this error. Until then, the site can be used by following the cors-anywhere link in the console after attempting a job search, then clicking "Request temporary access to the demo server". </p>
           <div class="text-center">
             <a href="https://sesdesoir.github.io/WebDevelopmentSuccess/" class="btn btn-primary mt-1">Deployed Web Application</a>
             <a href="https://github.com/Sesdesoir/GroupPjUno" class="btn btn-primary mt-1">View on Github</a>
