--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
   </div>
   <br>
   <div>
-    <a href="./assets/files/resume.pdf" download class="text-center">
+    <a href="https://github.com/Billy-MK/billy-mk.github.io/raw/main/assets/files/resume.pdf" download class="text-center">
       <h2>
         Click here to download my résumé
       </h2>
