Added a new project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,21 @@
 <div class="container">
   <div class="row" style="margin: 10px">
     
+    <!-- React Search Card -->
+    <div class="col-sm-6 mt-3">
+      <div class="card portfolio-card">
+        <img src="./assets/images/GoogleBooksReact.jpg" class="card-img-top" alt="Image of Web Application homepage" style="padding: 10px">
+        <div class="card-body">
+          <h2 class="card-title text-center">React Google Books Search</h2>
+          <p class="card-text">A web application which utilizes the Google Books API to search for and save information about books. The application was built using the MERN Stack, Mongo, Express, React, and Node. Follows best practice for storing sensitive data such as API keys, as well as Model-View-Controller file structure.</p>
+          <div class="text-center">
+            <a href="https://salty-fortress-68476.herokuapp.com/" class="btn btn-primary mt-1">Deployed Web Application</a>
+            <a href="https://github.com/Billy-MK/Google-Books-Search" class="btn btn-primary mt-1">View on Github</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Job Search card -->
     <div class="col-sm-6 mt-3">
       <div class="card portfolio-card">
