Redesigning the site, starting fresh. Keeping the other pages files for now, but they'll be removed when it's done.

--- a/index.html
+++ b/index.html
@@ -1,105 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billy Montooth-Keating</title>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css/index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
 </head>
 <body>
-
-    <!-- Navbar -->
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <!-- B logo on left side -->
-        <a class="navbar-brand" href="./index.html" style="font-size: 30px; color: lightblue"><strong>B</strong></a>
-        <!-- Toggler for responsiveness on small screens -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Collapsable content of the navbar -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="./portfolio.html">Portfolio</a>
-            </li>
-        </ul>
-        <form class="d-flex">
-            <a class="btn btn-sm btn-outline-secondary" href="./contact.html" role="button">Contact Me</a>
-        </form>
-        </div>
-    </div>
-</nav>
-
-    <!-- Banner and text -->
-
-<header class="banner" style="position: relative">
-    <div class="container-fluid banner-text">
-        <div class="display-1">Billy Montooth-Keating<br>
-            <div class="container">
-                <h4>HTML</h4>
-                <h4>CSS</h4>
-                <h4>Javascript</h4>
-            </div>
-        </div>
-    </div>
-</header>
-
-    <!-- Headshot and About Me -->
-
-<section class="container">
-    <article class="card mb-3 article">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img class="img-fluid p-3" src="./assets/images/Headshot.jpg" alt="Picture of Billy Montooth-Keating">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                                        <!-- Title text -->
-                    <h5 class="card-title display-4"><strong>About Me</strong></h5>
-                                        <!-- Article text -->
-                    <p class="card-text p-2">
-                        I currently live in Santa Barbara, California, after graduating from UC Santa Barbara with a degree in Biopsychology in June 2020. Now, I'm enrolled in the UC Davis Web Development Boot Camp, where I'm learning the skills necessary to become a full-stack web developer. Thus far, we've learned about front-end web development, including HTML, CSS, and Javascript. I'll be graduating from the Boot Camp in June 2021, after which I plan to become a full-time web developer. 
-                    </p>
-                </div>
-            </div>
-        </div>
-    </article>
-</section>
-
-    <!-- Portfolio section with picture of work -->
-
-<section class="container">
-    <article class="card mb-3 article">
-        <div class="row g-0">
-            <div class="col-md-8">
-                <div class="card-body">
-                    <!-- Title text -->
-                    <h5 class="card-title display-4"><strong>Portfolio</strong></h5>
-                    <!-- Article text -->
-                    <p class="card-text p-2">
-                        More projects will be added to the Portfolio page as I progress through the Boot Camp. As of now, you can see examples of some of the assignments I've been working on, including this website. To view my portfolio, click <a href="./portfolio.html">here.</a> 
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <img class="img-fluid p-3" src="./assets/images/ExampleWork.png" alt="Screenshot of work by Billy Montooth-Keating">
-            </div>
-        </div>
-    </article>
-</section>
-
-      <!-- Bootstrap Javascript -->
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  
+  <!-- Bootstrap Javascript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
