--- a/index.html
+++ b/index.html
@@ -7,11 +7,29 @@
   <title>Billy Montooth-Keating</title>
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/index.css" crossorigin="anonymous">
 
 </head>
 <body>
-  <div>
-
+  <!-- Whole page container -->
+    <div class="container-sm">
+        <!-- Nav Bar -->
+        <nav class="navbar navbar-expand-sm pt-5">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">BMK</a>
+                <ul class="navbar-nav d-flex mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
   </div>
 
     <!-- Bootstrap Javascript -->
