Simple intro header

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 </ul>
             </div>
         </nav>
+    <!-- Main text -->
+    <div class="mt-5">
+        <h1 class="text-center header">Hey, I'm Billy</h1>
+    </div>
   </div>
 
     <!-- Bootstrap Javascript -->
