Intro paragraph and alignment improved

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- Whole page container -->
-    <div class="container-sm">
+    <div class="container-sm px-5">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-sm pt-5">
             <div class="container-fluid">
@@ -31,9 +31,13 @@
             </div>
         </nav>
     <!-- Main text -->
-    <div class="mt-5">
-        <h1 class="text-center header">Hey, I'm Billy</h1>
+    <div class="m-5 text-center">
+        <h1 class="header">Hey, I'm Billy.</h1>
+        <h2 class="mt-4">A full-stack web developer.</h2>
     </div>
+    <p class="about text-center">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
+    <!-- Projects -->
+    
   </div>
 
     <!-- Bootstrap Javascript -->
