Buttons for resume/github/linkedin added and styled

--- a/index.html
+++ b/index.html
@@ -32,12 +32,19 @@
         </nav>
     <!-- Main text -->
     <div class="m-5 text-center">
-        <h1 class="header">Hey, I'm Billy.</h1>
+        <h1 class="header">Hey, I'm <span class="name">Billy</span>.</h1>
         <h2 class="mt-4">A full-stack web developer.</h2>
     </div>
     <p class="about text-center">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
+    <div class="text-center mt-5">
+        <button class="btn button">Résumé</button>
+        <button class="btn button">Github</button>
+        <button class="btn button">LinkedIn</button>
+    </div>
     <!-- Projects -->
-    
+    <div>
+
+    </div>
   </div>
 
     <!-- Bootstrap Javascript -->
