Added links to github/linkedin, button styling on hover

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </div>
     <p class="about text-center">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
     <div class="text-center mt-5">
-        <button class="btn button">Résumé</button>
-        <button class="btn button">Github</button>
-        <button class="btn button">LinkedIn</button>
+        <a class="btn button">Résumé</a>
+        <a class="btn button" href="https://github.com/Billy-MK">Github</a>
+        <a class="btn button" href="https://www.linkedin.com/in/william-montooth-keating-a8b192195/">LinkedIn</a>
     </div>
     <!-- Projects -->
     <div>
