More standardized text sizing, and css title class along with projects title

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Main text -->
     <div class="m-5 text-center">
         <h1 class="header">Hey, I'm <span class="name">Billy</span>.</h1>
-        <h2 class="mt-4">A full-stack web developer.</h2>
+        <h2 class="mt-4 header-sub">A full-stack web developer.</h2>
     </div>
     <p class="about text-center">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
     <div class="text-center mt-5">
@@ -43,7 +43,9 @@
     </div>
     <!-- Projects -->
     <div>
-
+        <div class="h2 title">
+            PROJECTS
+        </div>
     </div>
   </div>
 
